--- a/lockertests/index.html
+++ b/lockertests/index.html
@@ -59,8 +59,8 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>AQUAm25 Locker (1-Year Lock)</h1>
-      <p>Enter a <b>Public Key</b> manually or connect a wallet. Set an <b>AQUAm25</b> amount (or use 25/50/75/100%), and we’ll auto-build the XDR. Lock start and end (UTC) are shown before signing.</p>
+      <h1>AQUAm25 Interest Earning Locker</h1>
+      <p>Earn interest on your AQUAm25 by locking it for 1 year! Simply enter a <b>Public Key</b> manually or connect a wallet, then proceed to lock. We'll send your interest every week on Sundays until your lock ends, at which point you'll need to relock to continue earning interest.</p>
 
       <div class="row" style="margin-top:8px">
         <button id="connectBtn">Connect Wallet</button>
